--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
 <link href="https://1egy.best/frontend/css/helpers.css?version=0.0.5" rel="stylesheet">
 <link href="frontend\css\main.css?version=0.0.5" rel="stylesheet">
 <link href="frontend\css\responsive.css?version=0.0.5" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+<script src="tipuesearch/tipuesearch_content.js"></script>
+<link rel="stylesheet" href="tipuesearch/css/tipuesearch.css">
+<script src="tipuesearch/tipuesearch_set.js"></script>
+<script src="tipuesearch/tipuesearch.min.js"></script>
      
    </script>
    
@@ -68,21 +75,14 @@
 <span class="subm vam inline nos show-menu"><a class="suba i-menu _onmob nohide" rel="#right"></a></span>
 <a href="index.htm" class="logo vam"></a>
 </div>
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "WebSite",
-  "url": "https://1egy.best",
-  "potentialAction": {
-    "@type": "SearchAction",
-    "target": "https://1egy.best/search.php?q={q}",
-    "query-input": "required name=q"
-  }
-}
-        </script>
+
 <div class="topsrch suba_rel nohide td vam" itemscope="" itemtype="http://schema.org/WebSite">
 <link itemprop="url" href="index.htm">
-<script async src="https://cse.google.com/cse.js?cx=013168455948514278982:nzienye1ave"></script><div class="gcse-search"></div>
+<form class="navbar-form navbar-left" action="search.html" role="search">
+  <div class="form-group">
+    <input type="text" required name="q" id="tipue_search_input" class="form-control" placeholder="Search"> 
+   </div>
+</form>
 </div>
 <div class="user td vam tal">
 <div class="subm nos">
