--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <link itemprop="url" href="index.htm">
 <form class="navbar-form navbar-left" action="search.html" role="search">
   <div class="form-group">
-    <input type="text" required name="q" id="tipue_search_input" class="form-control" placeholder="Search"> 
+    <input type="text" required name="q" id="tipue_search_input" class="form-control" placeholder="ابحث عن فيلم او مسلسل او ممثل..."> 
    </div>
 </form>
 </div>
