--- a/search.html
+++ b/search.html
@@ -258,7 +258,7 @@
 $(document).ready(function() {
      $('#tipue_search_input').tipuesearch({
           'mode': 'json',
-          'contentLocation': 'https://1egy.best/tipuesearch/tipuesearch_content.json' 
+          'contentLocation': 'tipuesearch/tipuesearch_content.json' 
      });
 });
 </script>
