--- a/search.html
+++ b/search.html
@@ -130,15 +130,16 @@
 </div>
 <div id="main" class="td vat">
             <div id="mainLoad">
-        <div class="mbox">
-            <div class="nav rs_scroll_parent">
-                <div class="rs_scroll">
-                    <a href="https://vi.egybest.vip/search" class="active">
-                        <i class="i-srch"></i> البحث عن : diver
-                    </a>
-					     <div id="tipue_search_content"></div>
-                </div>
-            </div>
+        
+
+    <div class="col-md-6 content" role="main">
+    <main>
+      <div id="tipue_search_content"></div>
+    </main>
+    </div>
+
+
+ 
 </div>
 </div>
 </div>
@@ -248,6 +249,7 @@
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <!-- <script src="https://code.jquery.com/jquery.js"></script> -->
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
