--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 <script src="tipuesearch/tipuesearch_content.js"></script>
-<link rel="stylesheet" href="tipuesearch/css/tipuesearch.css">
+<link rel="stylesheet" href="tipuesearch/tipuesearch.css">
 <script src="tipuesearch/tipuesearch_set.js"></script>
 <script src="tipuesearch/tipuesearch.min.js"></script>
      
@@ -78,10 +78,8 @@
 
 <div class="topsrch suba_rel nohide td vam" itemscope="" itemtype="http://schema.org/WebSite">
 <link itemprop="url" href="index.htm">
-<form class="navbar-form navbar-left" action="search.html" role="search">
-  <div class="form-group">
-    <input type="text" required name="q" id="tipue_search_input" class="form-control" placeholder="ابحث عن فيلم او مسلسل او ممثل..."> 
-   </div>
+<form action="search.html">
+<input type="text" name="q" id="tipue_search_input">
 </form>
 </div>
 <div class="user td vam tal">
