--- a/search.html
+++ b/search.html
@@ -258,10 +258,7 @@
 <script src="tipuesearch/tipuesearch.min.js"></script>
 <script>
 $(document).ready(function() {
-     $('#tipue_search_input').tipuesearch({
-          'mode': 'json',
-          'contentLocation': 'tipuesearch/tipuesearch_content.json' 
-     });
+$(‘#tipue_search_input’).tipuesearch();
 });
 </script>
 <script type="4f1bcded3f8dcd3c461933f9-text/javascript" src="frontend\js\jquery.js?version=0.0.5"></script>
