--- a/search.html
+++ b/search.html
@@ -259,7 +259,7 @@
 <script src="tipuesearch/tipuesearch.min.js"></script>
 <script>
 $(document).ready(function() {
-$(‘#tipue_search_input’).tipuesearch();
+     $('#tipue_search_input').tipuesearch();
 });
 </script>
 <script type="4f1bcded3f8dcd3c461933f9-text/javascript" src="frontend\js\jquery.js?version=0.0.5"></script>
