--- a/search.html
+++ b/search.html
@@ -260,7 +260,7 @@
 <script>
 $(document).ready(function() {
      $('#tipue_search_input').tipuesearch({
-	 'wholeWords': false
+	 'wholewordonly': false
 	 });
 });
 </script>
