--- a/search.html
+++ b/search.html
@@ -260,7 +260,8 @@
 <script>
 $(document).ready(function() {
      $('#tipue_search_input').tipuesearch({
-	 'wholewordonly': false
+	 'mode' : 'live',
+	 'wholeWords': false
 	 });
 });
 </script>
