--- a/search.html
+++ b/search.html
@@ -130,13 +130,14 @@
 </div>
 </div>
 <div id="main" class="td vat">
-            <div id="mainLoad">
+<div id="mainLoad">
+<div class="mbox">
         
 
-    <div class="col-md-6 content" role="main">
-    <main>
+   
+
       <div id="tipue_search_content"></div>
-    </main>
+    
     </div>
 
 
