--- a/search.html
+++ b/search.html
@@ -132,16 +132,22 @@
 <div id="main" class="td vat">
 <div id="mainLoad">
 <div class="mbox">
+<div class="nav rs_scroll_parent">
+<div class="rs_scroll">
+<i class="i-srch"></i> البحث عن : 
+</a>
+</div>
+</div>
+<div id="movies" class="movies">
+<div class="loaded-data">
         
-
-   
-
       <div id="tipue_search_content"></div>
     
     </div>
 
 
  
+</div>
 </div>
 </div>
 </div>
