--- a/search.html
+++ b/search.html
@@ -91,7 +91,7 @@
         </script>
 <div class="topsrch suba_rel nohide td vam" itemscope="" itemtype="http://schema.org/WebSite">
 <link itemprop="url" href="index.htm">
-<form class="autoComplete search inline"  action="/search.html" role="search" itemprop="potentialAction" itemscope="" itemtype="http://schema.org/SearchAction">
+<form class="autoComplete search inline"  action="search.html" role="search" itemprop="potentialAction" itemscope="" itemtype="http://schema.org/SearchAction">
 <input type="hidden" required name="q" id="tipue_search_input"> <meta itemprop="target" content="https://egy-best.io/search.php?q={q}">
 <input type="submit" class="hide">
 <i class="i-close p _clear vam hide"></i>
