--- a/index.html
+++ b/index.html
@@ -90,10 +90,9 @@
 <div class="topsrch suba_rel nohide td vam" itemscope="" itemtype="http://schema.org/WebSite">
 <link itemprop="url" href="index.htm">
 <form class="autoComplete search inline"  action="search.html" role="search" itemprop="potentialAction" itemscope="" itemtype="http://schema.org/SearchAction">
-<input type="text" required name="q" id="tipue_search_input"> 
 <input type="submit" class="hide">
 <i class="i-close p _clear vam hide"></i>
-<input itemprop="query-input" class="q autoComplete ltr"  autocomplete="off" placeholder="ابحث عن فيلم او مسلسل او ممثل...">
+<input itemprop="query-input" class="q autoComplete ltr" type="text" required name="q" id="tipue_search_input" autocomplete="off" placeholder="ابحث عن فيلم او مسلسل او ممثل...">
 <i class="i-srch p _submit vam"></i>
 <div class="slist ltr hide">
 </div>
