--- a/search.html
+++ b/search.html
@@ -89,12 +89,12 @@
   }
 }
         </script>
-<div class="topsrch suba_rel nohide td vam" itemscope="" itemtype="http://schema.org/WebSite">
-<link itemprop="url" href="index.htm">
-<form class="autoComplete search inline"  action="search.html" role="search" itemprop="potentialAction" itemscope="" itemtype="http://schema.org/SearchAction">
-<input type="text" required name="q" id="tipue_search_input" placeholder="ابحث عن فيلم او مسلسل او ممثل..."> 
+<div class="topsrch suba_rel nohide td vam" itemscope itemtype="http://schema.org/WebSite">
+<link itemprop="url" href="https://1egy.best" />
+<form class="autoComplete search inline" action="search.html" itemprop="potentialAction" itemscope itemtype="http://schema.org/SearchAction">
 <input type="submit" class="hide">
 <i class="i-close p _clear vam hide"></i>
+<input itemprop="query-input" class="q autoComplete ltr" name="q" type="text" id="tipue_search_input" value="" autocomplete="off" placeholder="ابحث عن فيلم او مسلسل او ممثل...">
 <i class="i-srch p _submit vam"></i>
 <div class="slist ltr hide">
 </div>
