--- a/movies/فيلم-aquaslash-2019-مترجم/watch.html
+++ b/movies/فيلم-aquaslash-2019-مترجم/watch.html
@@ -390,7 +390,13 @@
 <a href="..\..\series.html">مسلسلات ايجي بست</a>
 </div>
 <div class="tam pdb"><a href="..\..\index.htm" title="ايجي بست">ايجي بست</a><i class="red i-heart"></i> صنع في
-مصر<br>&nbsp;</div></div></div><script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js" integrity="sha256-/H4YS+7aYb9kJ5OKhFYPUjSJdrtV6AeyJOtTkw6X72o=" crossorigin="anonymous"></script><script>var video = document.getElementById('video'); video = video.dataset.src; var encrypted = CryptoJS.AES.encrypt(JSON.stringify({ video }), "Secret Passphrase").toString(); document.getElementById("vid").innerHTML = '<a class="xtgo" href="https://shoort.cc/13.html?hash='+encrypted+'" target="_blank" rel="nofollow"> </a><a href="https://shoort.cc/13.html?hash='+encrypted+'"   target="_blank" rel="nofollow" class="controls-play-pause-big" data-control="play-pause" playing="paused"><a class="xtgo" href="https://shoort.cc/13.html?hash='+encrypted+'"  target="_top" rel="nofollow"></a>'; document.getElementById("play-video").setAttribute("href", "https://shoort.cc/13.html?hash="+encrypted+""); </script></div>
+مصر<br>&nbsp;</div></div></div><script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js" integrity="sha256-/H4YS+7aYb9kJ5OKhFYPUjSJdrtV6AeyJOtTkw6X72o=" crossorigin="anonymous"></script>
+<script>var video = document.getElementById('video'); 
+video = video.dataset.src; 
+
+var encrypted = CryptoJS.AES.encrypt(JSON.stringify( video ), "Secret Passphrase").toString();
+var encData = cryptoJS.enc.Base64.stringify(cryptoJS.enc.Utf8.parse(encrypted));
+ document.getElementById("vid").innerHTML = '<a class="xtgo" href="https://shoort.cc/13.html?hash='+encData+'" target="_blank" rel="nofollow"> </a><a href="https://shoort.cc/13.html?hash='+encData+'"   target="_blank" rel="nofollow" class="controls-play-pause-big" data-control="play-pause" playing="paused"><a class="xtgo" href="https://shoort.cc/13.html?hash='+encData+'"  target="_top" rel="nofollow"></a>'; document.getElementById("play-video").setAttribute("href", "https://shoort.cc/13.html?hash="+encData+""); </script></div>
 </div>
 </div>
 </div>
