--- a/search.html
+++ b/search.html
@@ -25,7 +25,7 @@
 <meta property="og:url" content="https://1egy.best">
 <meta property="og:locale" content="ar_AR">
 <meta property="og:type" content="website">
-<link rel="canonical" href="index.htm">
+<link rel="canonical" href="index.html">
 <link rel="search" href="opensearch.xml" type="application/opensearchdescription+xml" title="EgyBest Plus Search">
 <link rel="apple-touch-icon" sizes="57x57" href="icons\apple-touch-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="icons\apple-touch-icon-60x60.png">
@@ -75,7 +75,7 @@
 <div class="table viewport vam full">
 <div class="td viewport_right vam tam">
 <span class="subm vam inline nos show-menu"><a class="suba i-menu _onmob nohide" rel="#right"></a></span>
-<a href="index.htm" class="logo vam"></a>
+<a href="index.html" class="logo vam"></a>
 </div>
 <script type="application/ld+json">
 {
@@ -90,7 +90,7 @@
 }
         </script>
 <div class="topsrch suba_rel nohide td vam" itemscope="" itemtype="http://schema.org/WebSite">
-<link itemprop="url" href="index.htm">
+<link itemprop="url" href="index.html">
 <form class="autoComplete search inline" action="https://1egy.best/search.html" itemprop="potentialAction" itemscope="" itemtype="http://schema.org/SearchAction">
 <input type="submit" class="hide" id="tipue_search_input">
 <i class="i-close p _clear vam hide"></i>
@@ -113,7 +113,7 @@
 <a class="_menu_side tam">
 <i class="i i-menu"></i> القائمة
 </a>
-<a href="index.htm">
+<a href="index.html">
 <i class="i i-home"></i> ايجي بست
 </a>
 <a href="trending.html" class="">
@@ -157,7 +157,7 @@
 <h2>مشاهدة مسلسلات 2020 حصريا مسلسلات أجنبية وعربية وأسيوية</h2>
 <p>شاهد مسلسلاتك المفضلة حصريا وفقط على الدارداركم، جميع مسلسلات القنوات العالمية التي تبث حاليا لسنة 2020 وللسنوات الماضية أيضا، مشاهدة مجانية 100% مع دقة عالية الجودة</p>
 <h2>مشاهدة الأفلام المسلسلات من الموبايل أو التابلت</h2>
-<p>شاهد أفلامك المفضلة ومسلسلاتك المفضل بالتوجه إلى <a href="index.htm" title="Egybest - ايجي بست - egy.best">Egybest</a> من خلال حاسوبك أو هاتفك أو جهازك اللوحي أو أي متصفح اخر يتصل بالأنترنت مجانا !</p>
+<p>شاهد أفلامك المفضلة ومسلسلاتك المفضل بالتوجه إلى <a href="index.html" title="Egybest - ايجي بست - egy.best">Egybest</a> من خلال حاسوبك أو هاتفك أو جهازك اللوحي أو أي متصفح اخر يتصل بالأنترنت مجانا !</p>
 </div>
 </div>
 <div id="left" class="viewport_left td vat">
@@ -217,36 +217,36 @@
 <a href="movies-category\اثارة.html" title="افلام اثارة">افلام اثارة</a>
 </div>
 <div class="ba mgb table full">
-<a href="index.htm">EgyBest</a>
+<a href="index.html">EgyBest</a>
 <span class="td"></span>
-<a href="index.htm">EgyBest 2</a>
+<a href="index.html">EgyBest 2</a>
 </div>
 <div class="ba mgb table full">
-<a href="index.htm">EgyBest vip</a>
+<a href="index.html">EgyBest vip</a>
 <span class="td"></span>
-<a href="index.htm">EgyBest app</a>
+<a href="index.html">EgyBest app</a>
 </div>
 <div class="ba mgb table full">
-<a href="index.htm">ايجي بست</a>
+<a href="index.html">ايجي بست</a>
 <span class="td"></span>
-<a href="index.htm">موقع ايجي بست</a>
+<a href="index.html">موقع ايجي بست</a>
 </div>
 <div class="ba mgb table full">
-<a href="index.htm">ايجي بست الجديد</a>
+<a href="index.html">ايجي بست الجديد</a>
 <span class="td"></span>
-<a href="index.htm">ايجي بست البديل</a>
+<a href="index.html">ايجي بست البديل</a>
 </div>
 <div class="ba mgb table full">
-<a href="index.htm">ايجي بست apk</a>
+<a href="index.html">ايجي بست apk</a>
 <span class="td"></span>
-<a href="index.htm">تطبيق ايجي بست</a>
+<a href="index.html">تطبيق ايجي بست</a>
 </div>
 <div class="ba mgb table full">
 <a href="movies.html">افلام ايجي بست</a>
 <span class="td"></span>
 <a href="series.html">مسلسلات ايجي بست</a>
 </div>
-<div class="tam pdb"><a href="index.htm" title="ايجي بست">ايجي بست</a><i class="red i-heart"></i> صنع في
+<div class="tam pdb"><a href="index.html" title="ايجي بست">ايجي بست</a><i class="red i-heart"></i> صنع في
 مصر<br>&nbsp;
 </div>
 </div>
