--- a/match.html
+++ b/match.html
@@ -7,20 +7,6 @@
     <meta name="author" content="colorlib.com">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet" />
     <link href="css/main.css" rel="stylesheet" />
-	<style>
-    #left {
-      width: 200px;
-      float: left;
-    }
-    #right {
-      margin-left: 500px;
-	  color : #ffff;
-      /* Change this to whatever the width of your left column is*/
-    }
-    .clear {
-      clear: both;
-    }
-  </style>
   </head>
   <body>
     <div class="s01">
@@ -31,18 +17,16 @@
         <div class="inner-form">
           <div class="input-field first-wrap">
 		<script async src="https://cse.google.com/cse.js?cx=017898854971261021593:3hg7wh6sjvy"></script>
-            <div class="gcse-searchbox-only"></div>
+            <div class="gcse-searchbox"></div>
           </div>
         </div>
-		<div class="inner-form">
-		 <div id="container">
-           
-           <center><a href="https://bit.ly/2X6OSFT"><h1>Watch Real Madrid VS Man City</h1></a></center>
-		   <center><a href="https://bit.ly/2X7BZvc"><h1>Man City VS Real Madrid LIVE MATCH</h1></a></center>
-		   <center><a href="https://bit.ly/3fcJk2S"><h1>Real Madrid VS Man City LIVE</h1></a></center>
-  </div>
+		          
+           <center><a href="https://cse.google.com/cse?cx=017898854971261021593%3A3hg7wh6sjvy&q=real%20madrid%20vs%20man%20city%20live&oq=real%20madrid%20vs%20man%20city%20live&gs_l=partner-generic.3...2920.15556.0.15988.28.28.0.0.0.0.122.2908.10j18.28.0.csems%2Cnrl%3D13...0.12717j14803619j28...1.34.partner-generic..28.0.0.jgHfrmcIGus"><h1>Watch Real Madrid VS Man City</h1></a></center>
+		   <center><a href="https://cse.google.com/cse?cx=017898854971261021593%3A3hg7wh6sjvy&q=Man%20City%20VS%20Real%20Madrid%20LIVE%20MATCH&oq=Man%20City%20VS%20Real%20Madrid%20LIVE%20MATCH&gs_l=partner-generic.12...6632.6632.0.8401.1.1.0.0.0.0.107.107.0j1.1.0.csems%2Cnrl%3D13...0.109j11881j2...1.34.partner-generic..1.0.0.A8HWoQ7sO7g"><h1>Man City VS Real Madrid LIVE MATCH</h1></a></center>
+		   <center><a href="https://cse.google.com/cse?cx=017898854971261021593%3A3hg7wh6sjvy&q=Real%20Madrid%20VS%20Man%20City%20LIVE&oq=Real%20Madrid%20VS%20Man%20City%20LIVE&gs_l=partner-generic.12...1766.1766.0.3170.1.1.0.0.0.0.101.101.0j1.1.0.csems%2Cnrl%3D13...0.114j12996j2...1.34.partner-generic..1.0.0.WEVZ0P7cQ54"><h1>Real Madrid VS Man City LIVE</h1></a></center>
+
 		
-		</div>
+	
 		  <div> 
   <center><h2>Terms to use WeliveFoot service:
 
