--- a/match.html
+++ b/match.html
@@ -17,7 +17,8 @@
         <div class="inner-form">
           <div class="input-field first-wrap">
 		<script async src="https://cse.google.com/cse.js?cx=017898854971261021593:3hg7wh6sjvy"></script>
-            <div class="gcse-searchbox"></div>
+            <div class="gcse-search"></div>
+			
           </div>
         </div>
 		          
